OpenedPackages: add `java.desktop/java.awt.font` for all OSes