@@ -27,6 +27,7 @@ val OpenedPackages = listOf(
     "--add-opens=java.desktop/java.awt.event=ALL-UNNAMED",
     "--add-opens=java.desktop/java.awt.image=ALL-UNNAMED",
     "--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED",
+    "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED",
     "--add-opens=java.desktop/javax.swing=ALL-UNNAMED",
     "--add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED",
     "--add-opens=java.desktop/javax.swing.text.html=ALL-UNNAMED",
